feat: group http service type to wss/ws/https/http
1. count and group in dao/mysql, modify dashboard_service and
dashboard_controller too
2. add soft delete attr to access control/load balance/protocol rule
3. replace hard-coding redis addr with toml-configured redis addr
4. update swagger docs
